src/scss/custom/_pass.scss
.pass-container-img {
    background-color: #000000;
}

.pass-container {
    position: relative;
    margin: 2em;
    width: 90%;
    max-width: 1280px;
    max-height: 750px;
    aspect-ratio: 16 / 10;
    // overflow: hidden;

    -webkit-filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));

    &.is-portrait {
        max-height: 80vh;
        width: unset;
        aspect-ratio: 10 / 16;
        margin-left: auto;
        margin-right: auto;

        .pass-bg,
        .pass-container-img {
            aspect-ratio: 10 / 16;
        }
    }

    .user-drag-holder {
        display: flex;
        flex-direction: row;
        // overflow: none;
        position: absolute;

        .content {
            position: relative;
            border: 1px dashed transparent;
            transition: border-color 250ms ease-in-out;
            cursor: grab;

            &.is-selected,
            &:hover {
                border-color: white;

                img.user-img {
                    border-color: black;
                }

                .show-on-hover {
                    opacity: 1;
                }
            }

            img {
                overflow: auto;
                object-fit: contain;

                cursor: grab;

                &.user-img {
                    padding: 1em;
                    border: 1px dashed transparent;
                    transition: border-color 250ms ease-in-out;
                }
            }

            .text-container {
                padding: 0.5em 1em;
                overflow: hidden;
            }

            .resize-handle {
                position: absolute;
                bottom: 0;
                right: 0;
                z-index: 10;
                cursor: nwse-resize;
            }

            .edit-handle {
                position: absolute;
                top: 0;
                left: 0;
                z-index: 10;
                cursor: pointer;
            }

            .delete-handle {
                position: absolute;
                top: 0;
                right: 0;
                z-index: 10;
                cursor: pointer;
            }

            .show-on-hover {
                opacity: 0;
                transition: opacity 250ms ease-in-out;
            }
        }
    }

    .watermark {
        position: absolute;
        bottom: 0;
        right: 0;
        max-height: 2em;
    }

    .pass-grid {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        overflow: hidden;
        pointer-events: none;

        .grid-row {
            width: 100%;
            height: var(--grid-snap-point, 50px);
            border-bottom: 2px dashed #ffa94d38;
        }

        .grid-col {
            display: inline-block;
            width: var(--grid-snap-point, 50px);
            height: 100%;
            border-right: 2px dashed #ffa94d38;
        }
    }
}

.pass-bg {
    aspect-ratio: 16 / 10;
    width: 100%;
    height: 100%;
    max-width: 1280px;
    max-height: 750px;
    overflow: hidden;

    .pass-bg-img {
        height: 100%;
        min-width: 100%;
        object-fit: cover;
    }
}

.modal-select {
    cursor: pointer;

    &.hover-enlarge,
    .hover-enlarge {
        transition: all 150ms ease-in-out;
    }

    &:hover.hover-enlarge,
    &:hover .hover-enlarge {
        transform: scale(1.25);

        &.small-hover {
            transform: scale(1.125);
        }
    }

    .predefined-bg-img {
        padding: 1em;

        img {
            border-radius: 1em;
            transition: all 150ms ease-in-out;

            &:hover {
                transform: scale(1.05);
            }
        }
    }
}

